--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@ figures/
 sbatch/
 .DS_Store
 slurm*
-temp.py
+
 tmp/models/
 tmp/.ipynb_checkpoints
 
+auto_gitpull.py
+auto_gitpush.py
+
+*.bat
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
